--- a/ProyectoMiniMarket.Datos/ProyectoMiniMarket.Datos.csproj
+++ b/ProyectoMiniMarket.Datos/ProyectoMiniMarket.Datos.csproj
@@ -95,6 +95,7 @@
   <ItemGroup>
     <Compile Include="Conexion.cs" />
     <Compile Include="D_Categorias.cs" />
+    <Compile Include="D_Marcas.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
