--- a/ProyectoMiniMarket.Negocio/ProyectoMiniMarket.Negocio.csproj
+++ b/ProyectoMiniMarket.Negocio/ProyectoMiniMarket.Negocio.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Class1.cs" />
     <Compile Include="N_Categorias.cs" />
+    <Compile Include="N_Marcas.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
