--- a/ProyectoMiniMarket.Presentacion/ProyectoMiniMarket.Presentacion.csproj
+++ b/ProyectoMiniMarket.Presentacion/ProyectoMiniMarket.Presentacion.csproj
@@ -64,11 +64,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="frm_marcas - Copia.cs">
+    <Compile Include="frm_marcas .cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="frm_marcas - Copia.Designer.cs">
-      <DependentUpon>frm_marcas - Copia.cs</DependentUpon>
+    <Compile Include="frm_marcas .Designer.cs">
+      <DependentUpon>frm_marcas .cs</DependentUpon>
     </Compile>
     <Compile Include="frm_Categorias.cs">
       <SubType>Form</SubType>
@@ -93,8 +93,8 @@
       <DependentUpon>frm_rpt_categoria.cs</DependentUpon>
     </Compile>
     <Compile Include="SqlServerTypes\Loader.cs" />
-    <EmbeddedResource Include="frm_marcas - Copia.resx">
-      <DependentUpon>frm_marcas - Copia.cs</DependentUpon>
+    <EmbeddedResource Include="frm_marcas .resx">
+      <DependentUpon>frm_marcas .cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frm_Categorias.resx">
       <DependentUpon>frm_Categorias.cs</DependentUpon>
