Se crearon capaz de negocio y entidades para las unidades medidas

--- a/ProyectoMiniMarket.Entidades/ProyectoMiniMarket.Entidades.csproj
+++ b/ProyectoMiniMarket.Entidades/ProyectoMiniMarket.Entidades.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="E_Categorias.cs" />
     <Compile Include="E_marcas.cs" />
+    <Compile Include="E_unidades_medidas.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
