--- a/ProyectoMiniMarket.Datos/ProyectoMiniMarket.Datos.csproj
+++ b/ProyectoMiniMarket.Datos/ProyectoMiniMarket.Datos.csproj
@@ -96,6 +96,7 @@
     <Compile Include="Conexion.cs" />
     <Compile Include="D_Categorias.cs" />
     <Compile Include="D_Marcas.cs" />
+    <Compile Include="D_unidades_medidas.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
