--- a/ProyectoMiniMarket.Negocio/ProyectoMiniMarket.Negocio.csproj
+++ b/ProyectoMiniMarket.Negocio/ProyectoMiniMarket.Negocio.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Class1.cs" />
     <Compile Include="N_Categorias.cs" />
     <Compile Include="N_Marcas.cs" />
+    <Compile Include="N_unidades_medidas.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
