--- a/ProyectoMiniMarket.Presentacion/ProyectoMiniMarket.Presentacion.csproj
+++ b/ProyectoMiniMarket.Presentacion/ProyectoMiniMarket.Presentacion.csproj
@@ -64,6 +64,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="frm_unidades_medidas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frm_unidades_medidas.Designer.cs">
+      <DependentUpon>frm_unidades_medidas.cs</DependentUpon>
+    </Compile>
     <Compile Include="frm_marcas .cs">
       <SubType>Form</SubType>
     </Compile>
@@ -93,6 +99,9 @@
       <DependentUpon>frm_rpt_categoria.cs</DependentUpon>
     </Compile>
     <Compile Include="SqlServerTypes\Loader.cs" />
+    <EmbeddedResource Include="frm_unidades_medidas.resx">
+      <DependentUpon>frm_unidades_medidas.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frm_marcas .resx">
       <DependentUpon>frm_marcas .cs</DependentUpon>
     </EmbeddedResource>
