--- a/ProyectoMiniMarket.Datos/ProyectoMiniMarket.Datos.csproj
+++ b/ProyectoMiniMarket.Datos/ProyectoMiniMarket.Datos.csproj
@@ -94,6 +94,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Conexion.cs" />
+    <Compile Include="D_almacenes.cs" />
     <Compile Include="D_Categorias.cs" />
     <Compile Include="D_Marcas.cs" />
     <Compile Include="D_unidades_medidas.cs" />
