--- a/ProyectoMiniMarket.Entidades/ProyectoMiniMarket.Entidades.csproj
+++ b/ProyectoMiniMarket.Entidades/ProyectoMiniMarket.Entidades.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="E_almacenes.cs" />
     <Compile Include="E_Categorias.cs" />
     <Compile Include="E_marcas.cs" />
     <Compile Include="E_unidades_medidas.cs" />
