--- a/ProyectoMiniMarket.Negocio/ProyectoMiniMarket.Negocio.csproj
+++ b/ProyectoMiniMarket.Negocio/ProyectoMiniMarket.Negocio.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="N_almcenes.cs" />
     <Compile Include="N_Categorias.cs" />
     <Compile Include="N_Marcas.cs" />
     <Compile Include="N_unidades_medidas.cs" />
